SourceMetaData/src/objects/Related_Person__c.object
<CustomObject>
    <description>A relationship to another person. e.g. through marriage, parents or a business relationship.</description>
    <fields>
        <fullName>Person_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person From</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related People</relationshipLabel>
        <relationshipName>Related_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related People (To)</relationshipLabel>
        <relationshipName>Related_People1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_To__c</fullName>
        <formula>CASE(
TEXT(Relationship__c), 
&quot;Parent&quot;, &quot;Child&quot;,
&quot;Child&quot;, &quot;Parent&quot;, 
TEXT(Relationship__c))</formula>
        <label>Relationship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship From</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Person</label>
    <nameField>
        <displayFormat>Rel{00000000}</displayFormat>
        <label>Related Person Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>